Fix text alignment in boxes when it wraps

--- a/css/main.scss
+++ b/css/main.scss
@@ -146,6 +146,7 @@ strong {
   display: flex;
   align-items: center;
   justify-content: center;
+  text-align: center;
   background-color: #1a1b1d;
   color: #fff;
   font-size: 2.5rem;
